--- a/index.html
+++ b/index.html
@@ -329,23 +329,23 @@
 <div  id="threeContainer"></div>
 <canvas id="gpuMathCanvas"></canvas>
 <div id="controlsLeft" class="flipped">
-    <div>
-        3D View:
-        <div class="indent">
-            <label class="checkbox" for="dynamic">
-                <input id="dynamic" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                Dynamic Simulation
-            </label>
-            <label class="checkbox" for="static">
-                <input id="static" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                Static Simulation
-            </label>
-            <label class="checkbox" for="schematic">
-                <input id="schematic" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                Crease Pattern
-            </label>
-        </div>
-    </div>
+    <!--<div>-->
+        <!--3D View:-->
+        <!--<div class="indent">-->
+            <!--<label class="checkbox" for="dynamic">-->
+                <!--<input id="dynamic" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>-->
+                <!--Dynamic Simulation-->
+            <!--</label>-->
+            <!--<label class="checkbox" for="static">-->
+                <!--<input id="static" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>-->
+                <!--Static Simulation-->
+            <!--</label>-->
+            <!--<label class="checkbox" for="schematic">-->
+                <!--<input id="schematic" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>-->
+                <!--Crease Pattern-->
+            <!--</label>-->
+        <!--</div>-->
+    <!--</div>-->
     <br/><br/>
     <div class="dynamicSim">
         <div class="paddingBottom">Dynamic Sim Settings:</div>
