--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
     <script type="text/javascript" src="dependencies/path-data-polyfill.js"></script>
     <script type="text/javascript" src="dependencies/earcut.js"></script>
 
-    <script type="text/javascript" src="js/GLBoilerplate.js"></script>
-    <script type="text/javascript" src="js/GPUMath.js"></script>
+    <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
+    <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
     <script type="text/javascript" src="js/threeView.js"></script>
     <script type="text/javascript" src="js/globals.js"></script>
@@ -283,7 +283,7 @@
     <script type="text/javascript" src="js/beam.js"></script>
     <script type="text/javascript" src="js/crease.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
-    <script type="text/javascript" src="js/dynamicModel.js"></script>
+    <script type="text/javascript" src="js/dynamic/dynamicModel.js"></script>
     <script type="text/javascript" src="js/pattern.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
