trying out dynamic sim

--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
     <script type="text/javascript" src="js/crease.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
     <script type="text/javascript" src="js/staticSolver.js"></script>
+    <script type="text/javascript" src="js/dynamic/dynamicModel.js"></script>
+    <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
+    <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
     <script type="text/javascript" src="js/pattern.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
