--- a/index.html
+++ b/index.html
@@ -223,11 +223,14 @@
     <script id="thetaCalcShader" type="x-shader/x-fragment">
         #define TWO_PI 6.283185307179586476925286766559
         precision mediump float;
+        uniform vec2 u_textureDim;
         uniform vec2 u_textureDimFaces;
         uniform vec2 u_textureDimCreases;
         uniform sampler2D u_normals;
         uniform sampler2D u_lastTheta;
         uniform sampler2D u_creaseVectors;
+        uniform sampler2D u_lastPosition;
+        uniform sampler2D u_originalPosition;
         uniform float u_dt;
 
         void main(){
@@ -254,7 +257,17 @@
             if (dotNormals < -1.0) dotNormals = -1.0;
             else if (dotNormals > 1.0) dotNormals = 1.0;
             float theta = acos(dotNormals);
-            vec3 creaseVector = texture2D(u_creaseVectors, scaledFragCoord).xyz;
+
+            vec2 creaseVectorIndices = texture2D(u_creaseVectors, scaledFragCoord).xy;
+            vec2 creaseNodeIndex = vec2(mod(creaseVectorIndices[0], u_textureDim.x)+0.5, floor(creaseVectorIndices[0]/u_textureDim.x)+0.5);
+            vec2 scaledNodeIndex = creaseNodeIndex/u_textureDim;
+            vec3 node0 = texture2D(u_lastPosition, scaledNodeIndex).xyz + texture2D(u_originalPosition, scaledNodeIndex).xyz;
+            creaseNodeIndex = vec2(mod(creaseVectorIndices[1], u_textureDim.x)+0.5, floor(creaseVectorIndices[1]/u_textureDim.x)+0.5);
+            scaledNodeIndex = creaseNodeIndex/u_textureDim;
+            vec3 node1 = texture2D(u_lastPosition, scaledNodeIndex).xyz + texture2D(u_originalPosition, scaledNodeIndex).xyz;
+
+            vec3 creaseVector = node0-node1;
+
             float sign = dot(cross(normal1, normal2), creaseVector);
             if (sign < 0.0) theta *= -1.0;
             float diff = theta-lastTheta[0];
