--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
                     Colored Material
                 </label>
                 <div id="coloredMaterialOptions" class="indent">
-                    <label>Frontside Color (rgb hex): </label><input value="" placeholder="" class="form-control" type="text"><br/>
-                    <label>Backside Color (rgb hex): </label><input value="" placeholder="" class="form-control" type="text"><br/>
+                    <label>Color 1 (rgb hex): </label><input id="color1" value="" placeholder="" class="form-control" type="text"><br/>
+                    <label>Color 2 (rgb hex): </label><input id="color2" value="" placeholder="" class="form-control" type="text"><br/>
                 </div>
                 <label class="radio">
                     <input name="colorMode" value="normal" data-toggle="radio" class="custom-radio" type="radio"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
