--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
     <script type="text/javascript" src="js/staticSolver.js"></script>
     <script type="text/javascript" src="js/dynamic/dynamicModel.js"></script>
     <script type="text/javascript" src="js/pattern.js"></script>
+    <script type="text/javascript" src="js/saveSTL.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -365,20 +366,12 @@
                 <ul class="dropdown-menu">
                     <li><a class="loadFile" href="#">Import SVG...</a></li>
                     <li class="divider"></li>
-                    <li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>
+                    <!--<li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>-->
                     <li><a id="exportSTL" href="#">Save Simulation as STL...</a></li>
                 </ul>
             </li>
             <li><a data-menu-id="navDesign" class="menuHoverControls" href="#">Pattern</a></li>
             <li><a data-menu-id="navSim" class="menuHoverControls" href="#">Simulation</a></li>
-            <!--<li class="dropdown navDropdown">-->
-                <!--<a href="#" class="dropdown-toggle" id="viewMenuDropdown" data-toggle="dropdown">View <b class="caret"></b></a>-->
-                <!--<span class="dropdown-arrow"></span>-->
-                <!--<ul id="navViewMenu" class="dropdown-menu">-->
-                    <!--<li><a href="#">thing1</a></li>-->
-                    <!--<li><a href="#">things2</a></li>-->
-                <!--</ul>-->
-            <!--</li>-->
             <li><a id="about" class="menuHoverControls" target="_blank" href="#">About</a></li>
         </ul>
 
@@ -450,9 +443,27 @@
                     https://github.com/mapbox/earcut
 
                 <br/><br/>
-                Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a homework assignment for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
+                Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
                 Code available on <a href="https://github.com/amandaghassaei/OrigamiSimulator" target="_blank">Github</a>.
                 </p>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div class="modal fade" id="exportSTLModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-med">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <p><b>Export STL</b><br/><br/>
+                stl settings here...
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button id="doSTLsave" type="button" class="btn btn-success">Save</button>
+                <button type="button" class="btn btn default" data-dismiss="modal">Cancel</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
