--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
         <div class="modal-content">
             <div class="modal-body">
                 <p><b>Origami Simulator</b><br/><br/>
-                    http://www2.eng.cam.ac.uk/~sdg/preprint/5OSME.pdf
-                    http://origami.c.u-tokyo.ac.jp/~tachi/cg/SimulationOfRigidOrigami_tachi_4OSME.pdf
-                    https://github.com/mapbox/earcut
+                    <a href="http://www2.eng.cam.ac.uk/~sdg/preprint/5OSME.pdf">Origami Folding; A Structural Engineering Approach</a><br/>
+                    <a href="http://origami.c.u-tokyo.ac.jp/~tachi/cg/SimulationOfRigidOrigami_tachi_4OSME.pdf">Rigid Origami Simulator</a><br/>
+                    <a href="https://github.com/mapbox/earcut">Earcut Library</a><br/>
 
                 <br/><br/>
                 Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
