--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
                     <li><a id="exportSTL" href="#">Save Simulation as STL...</a></li>
                 </ul>
             </li>
-            <li><a data-menu-id="navDesign" class="menuHoverControls" href="#">Pattern</a></li>
-            <li><a data-menu-id="navSim" class="menuHoverControls" href="#">Simulation</a></li>
+            <li><a id="navPattern" href="#">Pattern</a></li>
+            <li><a id="navSimulation" href="#">Simulation</a></li>
             <li><a id="about" class="menuHoverControls" target="_blank" href="#">About</a></li>
         </ul>
 
@@ -383,11 +383,13 @@
 <div  id="threeContainer"></div>
 <canvas id="gpuMathCanvas"></canvas>
 <div id="controls">
+    <b>Fold Settings:</b><br/><br/>
     <div class="sliderInput" id="creasePercent">
         <span class="label-slider">Crease Percent : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
     </div>
     <br/><br/><br/>
+    <b>Stiffness Settings:</b><br/><br/>
     <div class="sliderInput" id="axialStiffness">
         <span class="label-slider">Axial Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
@@ -400,9 +402,9 @@
         <span class="label-slider">Panel Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
     </div>
-    <div id="svgViewer"></div>
     <div class="extraSpace"></div>
 </div>
+<div id="svgViewer"></div>
 
 <div id="controlsLeft" class="flipped">
     <div>
