--- a/index.html
+++ b/index.html
@@ -383,15 +383,15 @@
 <div  id="threeContainer"></div>
 <canvas id="gpuMathCanvas"></canvas>
 <div id="controls">
-    <b>Simulation:</b><br/>
+    <b>Simulation Type:</b><br/>
     <div class="indent">
         <label class="radio">
             <input name="simType" value="dynamic" data-toggle="radio" class="custom-radio" type="radio"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-            Dynamic Simulation
+            Compliant Dynamic Simulation
         </label>
         <label class="radio">
             <input name="simType" value="static" data-toggle="radio" class="custom-radio" type="radio"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-            Static Simulation (not finished yet)
+            Compliant Static Simulation (not finished yet)
         </label>
     </div><br/>
     <b>Fold Settings:</b><br/><br/>
