demo files dropdown

--- a/index.html
+++ b/index.html
@@ -364,6 +364,13 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">File <b class="caret"></b></a>
                 <span class="dropdown-arrow"></span>
                 <ul class="dropdown-menu">
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Demo Files<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
+                        </ul>
+                    </li>
                     <li><a class="loadFile" href="#">Import SVG...</a></li>
                     <li class="divider"></li>
                     <!--<li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>-->
