--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                             <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
                         </ul>
                     </li>
+                    <li><a class="loadFile" href="#">Import .txt...</a></li>
                     <li><a class="loadFile" href="#">Import SVG...</a></li>
                     <li class="divider"></li>
                     <!--<li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>-->
