--- a/index.html
+++ b/index.html
@@ -456,6 +456,13 @@
                     <input id="edgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Edges Visible
                 </label>
+            </div><br/>
+            Rendering:
+            <div class="indent">
+                <label class="checkbox" for="ambientOcclusion">
+                    <input id="ambientOcclusion" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                    Ambient Occlusion
+                </label>
             </div>
         </div>
     </div>
