--- a/index.html
+++ b/index.html
@@ -334,6 +334,14 @@
     <script type="text/javascript" src="dependencies/earcut.js"></script>
     <script type="text/javascript" src="dependencies/numeric-1.2.6.js"></script>
 
+    <script type="text/javascript" src="dependencies/EffectComposer.js"></script>
+    <script type="text/javascript" src="dependencies/MaskPass.js"></script>
+    <script type="text/javascript" src="dependencies/ShaderPass.js"></script>
+    <script type="text/javascript" src="dependencies/CopyShader.js"></script>
+    <script type="text/javascript" src="dependencies/SSAOShader.js"></script>
+    <script type="text/javascript" src="dependencies/Detector.js"></script>
+    <script type="text/javascript" src="dependencies/RenderPass.js"></script>
+
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
