--- a/index.html
+++ b/index.html
@@ -464,6 +464,24 @@
                     <input id="edgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Edges Visible
                 </label>
+                <div id="edgeVisOptions" class="indent">
+                    <label class="checkbox" for="mtnsVisible">
+                        <input id="mtnsVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                        Mountains
+                    </label>
+                    <label class="checkbox" for="valleysVisible">
+                        <input id="valleysVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                        Valleys
+                    </label>
+                    <label class="checkbox" for="panelsVisible">
+                        <input id="panelsVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                        Panel Creases
+                    </label>
+                    <label class="checkbox" for="passiveEdgesVisible">
+                        <input id="passiveEdgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                        Undriven Edges
+                    </label>
+                </div>
             </div><br/>
             Rendering:
             <div class="indent">
