--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/singlesquaretwist.svg">Square Twist (single)</a></li>
                         </ul>
                     </li>
                     <li><a class="loadFile" href="#">Import .txt...</a></li>
