--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@
                             <li><a href="#" class="demo" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/singlesquaretwist.svg">Square Twist (single)</a></li>
+                            <li><a href="#" class="demo" data-url="Tessellations/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
+
                         </ul>
                     </li>
                     <li><a class="loadFile" href="#">Import .txt...</a></li>
