--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@
                             <li><a href="#" class="demo" data-url="Tessellations/singlesquaretwist.svg">Square Twist (single)</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/reschtritessellation.svg">Resch Triangle Tessellation</a></li>
+                            <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar (not fully working yet)</a></li>
+
                         </ul>
                     </li>
                     <li><a class="loadFile" href="#">Import .txt...</a></li>
