--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     </div><br/>
     <b>Fold Settings:</b><br/><br/>
     <div class="sliderInput" id="creasePercent">
-        <span class="label-slider">Fold Percent : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <span class="label-slider">Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
     </div>
     <br/><br/><br/>
@@ -434,6 +434,11 @@
         <span class="label-slider">Panel Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
     </div>
+    <div class="sliderInput" id="percentDamping">
+        <span class="label-slider">Damping (0-1): </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <input value="" placeholder="" class="form-control" type="text">
+    </div>
+
     <div class="extraSpace"></div>
 </div>
 <div id="svgViewer"></div>
