--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" type="text/css" href="css/nav.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-86531114-8', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 
     <script id="vertexShader" type="x-shader/x-vertex">
         attribute vec2 a_position;
