--- a/index.html
+++ b/index.html
@@ -438,11 +438,11 @@
         <input value="" placeholder="" class="form-control" type="text">
     </div>
     <div class="sliderInput" id="creaseStiffness">
-        <span class="label-slider">Crease Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <span class="label-slider">Fold Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
     </div>
     <div class="sliderInput" id="panelStiffness">
-        <span class="label-slider">Panel Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <span class="label-slider">Facet Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control" type="text">
     </div>
     <div class="sliderInput" id="percentDamping">
@@ -496,7 +496,7 @@
                     </label>
                     <label class="checkbox" for="panelsVisible">
                         <input id="panelsVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Panel Creases
+                        Facet Creases
                     </label>
                     <label class="checkbox" for="passiveEdgesVisible">
                         <input id="passiveEdgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
