--- a/index.html
+++ b/index.html
@@ -392,7 +392,8 @@
                             <li><a href="#" class="demo" data-url="Tessellations/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/reschtritessellation.svg">Resch Triangle Tessellation</a></li>
                             <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar (not fully working yet)</a></li>
-
+                            <li class="divider"></li>
+                            <li><a href="#" class="demo" data-url="Curved/creaseMesh.txt">Curved Crease 1</a></li>
                         </ul>
                     </li>
                     <li><a class="loadFile" href="#">Import .txt...</a></li>
