--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <script type="text/javascript" src="js/crease.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
     <script type="text/javascript" src="js/staticSolver.js"></script>
-    <script type="text/javascript" src="js/dynamic/dynamicModel.js"></script>
+    <script type="text/javascript" src="js/dynamic/dynamicSolver.js"></script>
     <script type="text/javascript" src="js/pattern.js"></script>
     <script type="text/javascript" src="js/saveSTL.js"></script>
 
@@ -540,7 +540,9 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p><b>Export STL</b><br/><br/>
-                stl settings here...
+                    settings:<br/>
+                    single sided/double sided<br/>
+                    scale
                 </p>
             </div>
             <div class="modal-footer">
